2012-07-26  Iain Buclaw  <ibuclaw@ubuntu.com>

	* d-codegen.cc(IRState::hwi2toli): Handle maximum 64bit value case.

2012-07-18  Iain Buclaw  <ibuclaw@ubuntu.com>

	* d-codegen.cc(IRState::delegateVal): Remove ENABLE_CHECKING code.
	(IRState::objectInstanceMethod): Remove special case to avoid calling
	DotTypeExp::toElem.
	* d-glue.cc(CommaExp::toElem): Likewise.
	(DotTypeExp::toElem): Implement function.
	(StructLiteralExp::toElem): Assert instead that basetype is a struct.
	* d-gcc-reah.cc(real_t::real_t): New overload for 'double' type.
	(real_t::format): Change function type to int, return size of buffer
	from function.
	(real_t::formatHex): Likewise.
	* d-builtins2.cc(d_gcc_magic_stdarg_check): Update signature, remove
	check for is_c_std_arg.
	(d_gcc_magic_stdarg_module): Likewise.
	(d_gcc_magic_module): Remove check for core.vararg.
	* d-codegen.cc(INTRINSIC_STD_VA_ARG): Remove.
	(IRState::maybeSetUpBuiltin): Don't handle INTRINSIC_STD_VA_ARG.
	
2012-07-13  Iain Buclaw  <ibuclaw@ubuntu.com>

	* d-decls.cc(Dsymbol::toSymbolX): Remove use of PRIuSIZE format macro.
	(FuncDeclaration::toThunkSymbol): Likewise.

2012-07-12  Iain Buclaw  <ibuclaw@ubuntu.com>

	* d-lang.h(D_DECL_IS_CONTRACT): New macro.
	* d-decls.cc(FuncDeclaration::toSymbol): Mark in and out contracts as
	D_DECL_IS_CONTRACT.
	(FuncDeclaration::toThunkSymbol): D thunks no longer private by
	design. Alter mangling of thunk symbols to be unique across the entire
	compilation unit.
	* d-objfile.cc(ObjectFile::makeDeclOneOnly): Catch public contracts to
	mark them as one-only.
	(ObjectFile::outputThunk): Mark weakref thunks as private.

2012-07-10  Iain Buclaw  <ibuclaw@ubuntu.com>

	* Make-lang.in: Remove unused borrowed objects.
	* d-builtins2.cc(d_bi_builtin_func): Don't add builtin if
	-fno-builtin was given.
	* d-codegen.cc(IRState::emitTemplates): Remove static declaration.
	(IRState::splitDynArrayVarArgs): Likewise.
	(IRState::useInlineAsm): Likewise.
	(IRState::useBuiltins): Likewise.