@@ -60,7 +60,7 @@ struct real_t
   real_t (int v);
   real_t (d_uns64 v);
   real_t (d_int64 v);
-  real_t (double d);
+  real_t (d_float64 d);
   real_t& operator= (const real_t& r);
   real_t& operator= (int v);
   real_t operator+ (const real_t& r);
@@ -81,11 +81,6 @@ struct real_t
   real_t convert (Type *to_type) const;
   bool isZero (void);
   bool isNegative (void);
-  bool isConst0 (void);
-  bool isConst1 (void);
-  bool isConst2 (void);
-  bool isConstMinus1 (void);
-  bool isConstHalf (void);
   bool floatCompare (int op, const real_t& r);
   bool isIdenticalTo (const real_t& r) const;
   int format (char *buf, unsigned buf_size) const;
@@ -99,14 +94,27 @@ struct real_t
 
  private:
   // prevent this from being used
-  real_t& operator= (float)
+  real_t& operator= (d_float32)
   { return *this; }
 
-  real_t& operator= (double)
+  real_t& operator= (d_float64)
   { return *this; }
 
   fake_t frv_;
 };
+
+// Long double 80 bit floating point value implementation
+
+typedef real_t longdouble;
+
+template<typename T> longdouble ldouble(T x) { return (longdouble) x; }
+inline int ld_sprint(char* str, int fmt, longdouble x)
+{
+    if(fmt == 'a' || fmt == 'A')
+        return x.formatHex(str, 46); // don't know the size here, but 46 is the max
+    return x.format(str, 46);
+}
+
 
 struct real_t_Properties
 {
@@ -117,5 +125,35 @@ struct real_t_Properties
 };
 
 extern real_t_Properties real_t_properties[real_t::NumModes];
+
+// Macros used by the D frontend are mapped to real_t property values.
+
+#define FLT_MAX real_t_properties[real_t::Float].maxval;                
+#define DBL_MAX real_t_properties[real_t::Double].maxval;               
+#define LDBL_MAX real_t_properties[real_t::LongDouble].maxval;
+#define FLT_MIN real_t_properties[real_t::Float].minval;
+#define DBL_MIN real_t_properties[real_t::Double].minval;
+#define LDBL_MIN real_t_properties[real_t::LongDouble].minval;
+#define FLT_DIG real_t_properties[real_t::Float].dig;
+#define DBL_DIG real_t_properties[real_t::Double].dig;
+#define LDBL_DIG real_t_properties[real_t::LongDouble].dig;
+#define FLT_MANT_DIG real_t_properties[real_t::Float].mant_dig;
+#define DBL_MANT_DIG real_t_properties[real_t::Double].mant_dig;
+#define LDBL_MANT_DIG real_t_properties[real_t::LongDouble].mant_dig;
+#define FLT_MAX_10_EXP real_t_properties[real_t::Float].max_10_exp;
+#define DBL_MAX_10_EXP real_t_properties[real_t::Double].max_10_exp;
+#define LDBL_MAX_10_EXP real_t_properties[real_t::LongDouble].max_10_exp;
+#define FLT_MIN_10_EXP real_t_properties[real_t::Float].min_10_exp;
+#define DBL_MIN_10_EXP real_t_properties[real_t::Double].min_10_exp;
+#define LDBL_MIN_10_EXP real_t_properties[real_t::LongDouble].min_10_exp;
+#define FLT_MAX_EXP real_t_properties[real_t::Float].max_exp;
+#define DBL_MAX_EXP real_t_properties[real_t::Double].max_exp;
+#define LDBL_MAX_EXP real_t_properties[real_t::LongDouble].max_exp;
+#define FLT_MIN_EXP real_t_properties[real_t::Float].min_exp;
+#define DBL_MIN_EXP real_t_properties[real_t::Double].min_exp;
+#define LDBL_MIN_EXP real_t_properties[real_t::LongDouble].min_exp;
+#define FLT_EPSILON real_t_properties[real_t::Float].epsilonval;
+#define DBL_EPSILON real_t_properties[real_t::Double].epsilonval;
+#define LDBL_EPSILON real_t_properties[real_t::LongDouble].epsilonval;
 
 #endif
